--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - master
+      - deploy
 
 env:
   AZURE_WEBAPP_NAME: Robert-App
@@ -25,5 +25,5 @@ jobs:
       uses: azure/webapps-deploy@v1
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_DEPLOY }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
