--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - master
+      - test
 
 env:
   AZURE_WEBAPP_NAME: Robert-App
@@ -21,6 +21,9 @@ jobs:
     - name: Install dependencies
       run: |
         npm install
+    - name: 'Run tests'
+      run : |
+        npm run test
     - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v1
       with:
